added more links

--- a/w01.md
+++ b/w01.md
@@ -7,3 +7,22 @@ permalink: /W01/
 1. [Vim Cheatsheet](https://www.cs.cmu.edu/~15131/f17/topics/vim/vim-cheatsheet.pdf)
 
     A quick cheetsheet for vim editor, includes vim commands for navigation, editing, and managing files
+2. [Vi Cheatsheet](http://www.atmos.albany.edu/daes/atmclasses/atm350/vi_cheat_sheet.pdf)
+
+    Cheatsheet for vi editor, includes, vi commands for navigation, editing, and managing files 
+
+3.[Vim tutor](http://www2.geog.ucl.ac.uk/~plewis/teaching/unix/vimtutor)
+
+    A hands on beginner's tutorial page for vim editor, it covers the basics for editing and managing files 
+
+4.[Regex Cheatsheet](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet)
+
+This page provides an overall cheat sheet of all the capabilities of RegExp syntax.
+
+5.[Bash Cheatsheet](https://devhints.io/bash)
+
+This is a quick reference to getting started with Bash scripting.
+
+6.[Markdown Cheatsheet](https://devhints.io/markdown)
+
+A quick cheatsheet for making markdowns
