added new links

--- a/w01.md
+++ b/w01.md
@@ -4,25 +4,42 @@ permalink: /W01/
 
 # TOP 10 LINKS WEEK 1
 
-1. [Vim Cheatsheet](https://www.cs.cmu.edu/~15131/f17/topics/vim/vim-cheatsheet.pdf)
+1. [Introduction to Bash](https://medium.com/@jasonrigden/a-brief-tutorial-of-the-absolute-basics-of-bash-9a379c49f7a8)
+
+    This article is an introduction to the basics of Bash for beginners
+
+2. [Vim Cheatsheet](https://www.cs.cmu.edu/~15131/f17/topics/vim/vim-cheatsheet.pdf)
 
     A quick cheetsheet for vim editor, includes vim commands for navigation, editing, and managing files
-2. [Vi Cheatsheet](http://www.atmos.albany.edu/daes/atmclasses/atm350/vi_cheat_sheet.pdf)
+3. [Vi Cheatsheet](http://www.atmos.albany.edu/daes/atmclasses/atm350/vi_cheat_sheet.pdf)
 
     Cheatsheet for vi editor, includes, vi commands for navigation, editing, and managing files 
 
-3. [Vim tutor](http://www2.geog.ucl.ac.uk/~plewis/teaching/unix/vimtutor)
+4. [Vim tutor](http://www2.geog.ucl.ac.uk/~plewis/teaching/unix/vimtutor)
 
     A hands on beginner's tutorial page for vim editor, it covers the basics for editing and managing files 
 
-4. [Regex Cheatsheet](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet)
+5. [Regex Cheatsheet](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet)
 
     This page provides an overall cheat sheet of all the capabilities of RegExp syntax.
 
-5. [Bash Cheatsheet](https://devhints.io/bash)
+6. [Bash Cheatsheet](https://devhints.io/bash)
 
     This is a quick reference to getting started with Bash scripting.
 
-6. [Markdown Cheatsheet](https://devhints.io/markdown)
+7. [Markdown Cheatsheet](https://devhints.io/markdown)
 
     A quick cheatsheet for making markdowns
+
+8. [Bash Scripting Tutorial](https://linuxhint.com/bash_scripting_tutorial_beginners/)
+
+    A beginner's guide to bash scripting
+
+9. [Ubuntu vs Debian](https://linuxconfig.org/debian-vs-ubuntu#:~:text=Ubuntu%20and%20Debian%20are%20very,culture%20around%20it%20as%20well.)
+
+    This site elaborates the diffrences beetween two popular Linux distributions, Ubuntu and Debian
+
+10. [Virtual Machine Guide](https://www.howtogeek.com/196060/beginner-geek-how-to-create-and-use-virtual-machines/)
+
+    This site provides a guide on how to create and use virtual machines
+
