added more links

--- a/w02.md
+++ b/w02.md
@@ -10,15 +10,15 @@ permalink: /W02/
 
 2. [Symmetric & Aysmmetric Key Encryption](https://www.geeksforgeeks.org/difference-between-symmetric-and-asymmetric-key-encryption/) 
 
-	Website ini menjelaskan tentang aysmetric dan symmetric encryption. 
+	Website ini menjelaskan tentang aysmetric dan symmetric encryption. Apa perbedaan pada keduanya, dan kelebihan dan kekurangan masing masing encrytion.
 
 3. [Apakah Windows Defender cukup?](https://www.safetydetectives.com/blog/windows-defender-vs-antiviruses-is-defender-enough-for-you/)
 
-	Sebagai pengguna windows saya penasaran apakah antivirus bawaan dari windows, Windows Defender, memberikan security yang cukup untuk pengguna. Web ini menjelaskan kelebihan dan kekurangan dari windows defender serta perbandingannya dengan antivirus third party lainnya. 
+	Sebagai pengguna operating system Windows saya penasaran apakah antivirus bawaan dari windows, Windows Defender, memberikan security yang cukup untuk pengguna. Web ini menjelaskan kelebihan dan kekurangan dari windows defender serta perbandingannya dengan antivirus third party lainnya. 
 
 4. [Access Control List](https://www.imperva.com/learn/data-security/access-control-list-acl/)
 
-	Web ini menjelaskan tentang apa itu Access Control List (ACL).
+	Web ini menjelaskan tentang apa itu Access Control List (ACL), bagaimana kerja ACL, untuk apa saja kegunaannya serta jenis - jenis ACL.
 
 5. [Apa itu Checksum?](https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/)
 
@@ -26,12 +26,20 @@ permalink: /W02/
 
 6. [GPG](https://www.liquidweb.com/kb/how-do-i-use-gpg/)
 
-	Web ini menjelaskan apa itu GPG dan cara menggunakannya
+	Web ini menjelaskan apa itu GPG dan cara menggunakannya. web ini membantu saya mengerti lebih lanjut tentang penggunaan GPG yang diterapkan di assignment week2
 
 7. [How secure is 256 bit security](https://www.youtube.com/watch?v=S9JGmA5_unY&ab_channel=3Blue1Brown)
 
 	Video ini mengupas tentang salah satu cryptogrpahic hash function yang populer yaitu SHA256. Video oleh 3Blue1Brown ini menunjukan seberapa sulit untuk menebak isi suatu message yang di hash dengan SHA256 dengan perumpamaan yang sangat menarik.
 
-8. []()
+8. [DOS Attack](https://www.cloudflare.com/learning/ddos/glossary/denial-of-service/)
 
-9. []() 
+	Web ini menjelaskan tentang salah satu security attack yaitu DoS attack. Apa saja kategori DoS attack dan apa efek yang terjadi ketika sebuah komputer terkena DoS attack.
+
+9. [Have I been pwned](https://haveibeenpwned.com/)
+
+	Web ini dapat mengecek apakah sebuah email atau password pernah terekspos dalam suatu data breach. Dari web ini saya jadi tahu bahwa pernah terjadi data breach yang dialami tokopedia pada April 2020.
+
+10. [C Tutorial](https://www.programiz.com/c-programming)
+
+	Web ini memberikan tutorial bertahap untuk bahasa pemrograman C..
