added new links for w03

--- a/w03.md
+++ b/w03.md
@@ -4,8 +4,24 @@ permalink: /W03/
 
 # TOP 10 LINKS WEEK 3
 
-1. [Coming Soon]()
+1. [What is a File System](https://www.guru99.com/file-systems-operating-system.html)
 
-    Description
+	Website ini menjelaskan tentang apa itu File System, tujuan dari penggunaan File System serta Properties dari File Systems. Pada week 03 kali ini File System banyak sekali disebutkan, website ini membantu saya mengerti secara umum apa itu file system, serta detail - detail lainnya.
 
+2. [(Video) File System Concept](https://www.youtube.com/watch?v=mzUyMy7Ihk0&ab_channel=Udacity)
 
+	Video singkat ini menjelaskan tentang bagaimana file system bekerja. Video ini membantu saya mengerti lebih baik lagi tentang cara kerja file system dengan illustrasi yang simple namun jelas. 
+
+3. [FUSE File Systems](https://www.cs.cmu.edu/~fp/courses/15213-s07/lectures/15-filesys/index.html)
+
+	Website ini menjelaskan secara umum apa itu FUSE dan apa hubungannya dengan file systems pada umumnya. Website ini membantu saya mengerti secara umum bagaimana fuse bekerja dan perbedaanya dengan file systems pada umumnya.
+
+3. [How To Partition a Disk (Windows)](https://www.lifewire.com/how-to-partition-a-hard-drive-2626081)
+
+	Web ini memberikan tutorial bagaimana melakukan disk partition pada OS Windows. Saya rasa ini bermanfaat terutama ketika menggunakan/membeli device baru yang secara default hanya ada 1 partition.
+
+5. [Tar vs Zip vs Gz](https://itsfoss.com/tar-vs-zip-vs-gz/)
+
+	Web ini menjelaskan tentang perbedaan extension .tar .zip dan .gz. Saya sendiri selama ini hanya familiar dengan .zip, namun pada tugas week 03 kali ini saya baru bertemu dengan .tar dan .gz. Web ini membantu saya mengerti perbedaan diantara ketiganya serta keunggulan dan kekurangan masing masing. 
+
+6. []()
