fixed typos in readme.md

--- a/w03.md
+++ b/w03.md
@@ -24,4 +24,10 @@ permalink: /W03/
 
 	Web ini menjelaskan tentang perbedaan extension .tar .zip dan .gz. Saya sendiri selama ini hanya familiar dengan .zip, namun pada tugas week 03 kali ini saya baru bertemu dengan .tar dan .gz. Web ini membantu saya mengerti perbedaan diantara ketiganya serta keunggulan dan kekurangan masing masing. 
 
-6. []()
+6. [Virtual File Systems](https://opensource.com/article/19/3/virtual-filesystems-linux)
+
+	Web ini menjelaskan tenang bagaimana Virtual File System bekerja dan mengapa dibituhkan. Web ini membantu saya mengerti lebih lanjut mengenai virtual file system.
+
+7. [Neetwork File System (NFS)](https://www.geeksforgeeks.org/network-file-system-nfs/)
+
+	Article ini menjelaskan tentang 
