added a dew more links and updated log

--- a/w03.md
+++ b/w03.md
@@ -30,4 +30,16 @@ permalink: /W03/
 
 7. [Neetwork File System (NFS)](https://www.geeksforgeeks.org/network-file-system-nfs/)
 
-	Article ini menjelaskan tentang 
+	Article ini menjelaskan dengan detil mengenai Network File System. Web ini meanrik dalam penjelasannya tentang distributed file systems, keunggulan dari penggunaan  distributed file system, arsitekturnya beserta contoh -contohnya. 
+
+8. [NTFS vs FAT32](https://www.datto.com/blog/fat-vs-ntfs-which-is-better)
+
+	Website ini menjelaskan 2 file system yang cukup populer yaitu NTFS dan FAT32. Saya anggap web ini informatif dalam menunjukan  kelebihan dan keurangan masing - masing file system.
+
+9. [Mounting](http://openstorage.gunadarma.ac.id/linux/docs/v06/Kuliah/SistemOperasi/BUKU/SistemOperasi-4.X-2/ch14s07.html)
+
+	Web ini menjelaskan tentang proses mounting pada sebuah struktur direktori. Web ini membangtu saya mengerti lebih baik tentang proses mounting, komponen apa saja yang berperan saat proses mounting, serta apa yang dilakukan saat proses unmounting.
+
+10. [Consistency Semantics](https://www.geeksforgeeks.org/consistency-semantics-for-file-sharing/#:~:text=Consistency%20Semantics%20is%20concept%20which,file%20and%20at%20same%20time.)
+
+	Website ini menjelaskan tentang apa itu consistency semantics pada file systems. Web ini membantu saya mengerti lebih lanjut tentang apa itu konsep Consistency semantics, tipe-tipe semantics yang berbeda, beserta contoh-contohnya.
