--- a/w03.md
+++ b/w03.md
@@ -28,7 +28,7 @@ permalink: /W03/
 
 	Web ini menjelaskan tenang bagaimana Virtual File System bekerja dan mengapa dibituhkan. Web ini membantu saya mengerti lebih lanjut mengenai virtual file system.
 
-7. [Neetwork File System (NFS)](https://www.geeksforgeeks.org/network-file-system-nfs/)
+7. [Network File System (NFS)](https://www.geeksforgeeks.org/network-file-system-nfs/)
 
 	Article ini menjelaskan dengan detil mengenai Network File System. Web ini meanrik dalam penjelasannya tentang distributed file systems, keunggulan dari penggunaan  distributed file system, arsitekturnya beserta contoh -contohnya. 
 
