added links for w04

--- a/w04.md
+++ b/w04.md
@@ -4,6 +4,28 @@ permalink: /W04/
 
 # TOP 10 LINKS WEEK 4
 
-1. [Coming Soon](/)
+1. [Memory Allocation](https://binaryterms.com/static-and-dynamic-memory-allocation.html)
 
-	Description
+	Web ini menjelaskan tentang apa itu memory allocation dalam operating system, tipe - tipenya, serta kekurangan dan kelebihan dari masing masing tipe. Web ini membantu saya mengerti lebih lanjut tentang Dynamic memory allocation dan static memory allocation
+
+2. [Internal vs External Fragmentation](https://www.geeksforgeeks.org/difference-between-internal-and-external-fragmentation/)
+
+	Website ini memaparkan perbedaan antara internal fragmentation dan external fragmentation, Menurut saya web ini menarik karena dapat menjelaskan kedua tipe fragmentation dengan jelas serta menunjukan perbedaan -perbedaannya diaspek aspek yang berbeda.
+
+3. [Page Tables (Video)](https://www.youtube.com/watch?v=KNUJhZCQZ9c&ab_channel=DavidBlack-Schaffer)
+
+	Video singkat ini menjelaskan tentang apa itu page tables dan bagaimana cara kerjanya. Menurut saya Video ini menarik karena dapat menjelaskan dengan baik bagaimna page table memetakan virtual address ke physical addrress 
+
+4. [Evolution of Memory Storage](https://www.frontierinternet.com/gateway/data-storage-timeline/)
+
+	Web ini menggambarkan timeline perkembangan portable memory storage mulai dari tahun 1890 sampai sekarang. Laman ini menyampaikan informasi tersebut dengan sangat menarik dan imersif. Tidak terbayang pada awal-awal teknologi dikembangkan ukuran memory storage hanya dapat menyimpan sekitar 80 byte. 
+
+5. [Little Endian vs Big Endian](https://chortle.ccsu.edu/AssemblyTutorial/Chapter-15/ass15_3.html)
+
+	Web ini menjelaskan dengan singkat dan padat perbedaan dari Big Endian dan Little Endian Byte Order. Walaupun kelihatannya sederhana, saya seringkali lupa dan tertukar antara Little Endian dan Big Endian, web ini membantu saya memahami perbedaan antara keduanya.
+
+6. [Memory Management](https://www.guru99.com/os-memory-management.html)
+
+	Web ini menjelaskan tentang memory management pada operating system secara umum. Menurut saya web ini menarik karena mencakup banyak materi pada week 4 ini seperti Swapping, Paging, Segmentaion dan lain -lain.
+
+7. []()
