added more links

--- a/w04.md
+++ b/w04.md
@@ -28,4 +28,11 @@ permalink: /W04/
 
 	Web ini menjelaskan tentang memory management pada operating system secara umum. Menurut saya web ini menarik karena mencakup banyak materi pada week 4 ini seperti Swapping, Paging, Segmentaion dan lain -lain.
 
-7. []()
+7. [Executable File Formats](https://www.lifewire.com/list-of-executable-file-extensions-2626061)
+
+	Web ini menjabarkan tentang jenis - jenis file executable. Web ini menarik dalam menunjukan jenis jenis executable berbeda serta jenis jenis yang harus diwaspadai karena dapat berbahaya apabila di run.
+
+8. [Address Binding](https://www.geeksforgeeks.org/address-binding-and-its-types/)
+
+	Web ini menjelaskan tentang apa itu adress binding serta tipe - tipe nya. Web ini menari karena dapat menjelaskan dengan baik tentang address binding, Jenis - jenisnya, serta load time dan excecution time dari tiap jenis binding
+
