added more links

--- a/w04.md
+++ b/w04.md
@@ -36,6 +36,10 @@ permalink: /W04/
 
 	Web ini menjelaskan tentang apa itu adress binding serta tipe - tipe nya. Web ini menari karena dapat menjelaskan dengan baik tentang address binding, Jenis - jenisnya, serta load time dan excecution time dari tiap jenis binding
 
-9. []()
+9. [Static vs Dynamic Linking](https://www.geeksforgeeks.org/static-and-dynamic-linking-in-operating-systems/)
 
-10. []()
+	Web ini menjelaskan tentang perbedaan antara static dan dynamic linking. Web ini menarik karena dapat menjelaskan perbedaan antara kedua jenis linking dengan baik dan informasinya mudah dipahami
+
+10. [What is Virtual Memory](https://www.geeksforgeeks.org/virtual-memory-in-operating-system/)
+
+	Web ini menjelaskan tentang apa itu virtual memory beserta proses - proses yang dilakukannya. Web ini menarik dalam penjelasannya tentang bagaimana kerja virtual memory dalam operating system, swapping, thrashing, dan proses - proses lainnya.
