added links fixed permalink

--- a/w05.md
+++ b/w05.md
@@ -1,10 +1,18 @@
 
 ---
-permamlink: /W04/
+permamlink: /W05/
 ---
 
 # TOP 10 LINKS WEEK 5
 
-1. [Coming Soon](#)
+1. [Memory hierarchy](https://www.geeksforgeeks.org/memory-hierarchy-design-and-its-characteristics/)
 
-	Description 
+	website ini menjelaskan tentang Memory Heirarchy beserta sifat -sifatnya. Web ini menarik karena dapat menjelaskan tentang perbedaan perbedaan memory di tiap hierarchynya beserta performancenya.
+
+2. [bashupload](https://bashupload.com/)
+
+	bashupload adalah sebuah web tool yang memudahkan pemindahan file antar machine. saya menggunakan web ini untuk memindahkan gambar screenshot vm ram pada tugas week05 dari Windows ke VM.
+
+3. [Page Fault](https://www.geeksforgeeks.org/page-fault-handling-in-operating-system/)
+
+	website ini menjelaskan tentang apa itu page fault dan handlingnya pada sebuah operating system
