--- a/w05.md
+++ b/w05.md
@@ -15,4 +15,33 @@ permamlink: /W05/
 
 3. [Page Fault](https://www.geeksforgeeks.org/page-fault-handling-in-operating-system/)
 
-	website ini menjelaskan tentang apa itu page fault dan handlingnya pada sebuah operating system
+	website ini menjelaskan tentang apa itu page fault dan handlingnya pada sebuah operating system. web ini menarik karena dapat menjelaskan dengan detail namun singkat mengenai proses page fault.
+
+4. [First-In-First-Out](https://www.geeksforgeeks.org/fifo-first-in-first-out-approach-in-programming/)
+
+	Isitlah first in first out sering kita dengar ketika mempelajar data structure seperti queue. Dalam web ini dijelaskan lebih lanjut mengenai proses FIFO dan penggunaannya. web ini menarik karena membantu saya memahami konsep FIFO yang sudah sebelumnya saya ketahui di struktur data queue yang ternyata digunakan juga dalam disk scheduling
+
+5. [Demand Paging](https://www.javatpoint.com/os-demand-paging)
+
+	website ini menjelaskan tentang konsep demand paging. web ini menarik karena dapat menjelaskan tentang masalah paging dalam virtual memory dan salah satu cara mengatasinya.
+
+6. [Belady Anomaly](https://prepinsta.com/operating-systems/beladys-anomaly/)
+
+	Web ini menjelaskan tentang apa itu Belady Anomaly. web ini menarik karena dapat menejelaskan dengan jelas apa itu Belady Anomaly dalam virtual memory bserta dengan illustrasi dan graph yang membantu pemahaman.
+
+7. [Thrasing](https://www.geeksforgeeks.org/techniques-to-handle-thrashing/)
+
+	web ini menjelaskan tentang apa itu thrasing dan teknik-teknik untuk mengatasinya. Penjelasan dari weeb ini dilengkapi dengan illustrasi dan contoh sehingga jelas dan mudah dipahami.
+
+8. [Buddy System Memory Allocation](https://www.geeksforgeeks.org/buddy-system-memory-allocation-technique/)
+
+	web ini menjelaskan tentang buddy system memory allocation. web ini menarik karena dapat menjelaskan buddy system memory allocation dengan jelas beserta kelebihan dan kekurangannya.
+
+9. [Buddy System vs Slab Allocator](https://www.geeksforgeeks.org/operating-system-allocating-kernel-memory-buddy-system-slab-system/)
+
+	web ini menjelaskan tentang perbedaan antara 2 strategi memory allocation yaitu buddy system dan slab allocation. web ini menarik karena dapat menjelaskan perbedaan keduanya dengan jelas beserta kekurangan dan kelebihan masing masing.
+
+10. [Global vs Local Allocation](https://www.geeksforgeeks.org/operating-system-allocation-frames/)
+
+	web ini menjelaskan tentang beberapa frame allocation dalam operating system diantaranya ada global dan local allocation. web ini menarik karena dapat menjelaskan dengan baik keduanya serta perbedaan dan keurangan masing - masing.
+
