--- a/w06.md
+++ b/w06.md
@@ -4,4 +4,36 @@ permalink: /W06/
 
 # TOP 10 LINKS WEEK 6
 
-1. [Coming Soon](#)
+1. [Concurrency vs Paralellism](https://www.geeksforgeeks.org/difference-between-concurrency-and-parallelism/)
+
+    Website ini menejaskan secara general perbedaan dari concurenncy dan paralellism. Singkatnya, perbedaan antara keduanya adalah sebagai berikut :
+    - **Concurency** : *Concurrency is the task of running and managing the multiple computations at the same time.*
+    - **Parallelism** : *Parallelism is the task of running multiple computations simultaneously.*
+
+
+    Perbedaan - perbdaan lainnya djelaskan dengan lebih rinci pada link diatas. Saya seringkali tertukar antara kedua term tersebut, web ini membantu saya memahami perbedaannya.
+
+2. [Process Creation & Termination](https://www.tutorialspoint.com/inter_process_communication/inter_process_communication_process_creation_termination.htm#:~:text=Process%20creation%20is%20achieved%20through,is%20called%20the%20parent%20process.)
+
+    Web ini menjelaskan tentang alur pembuatan dan terminasi sebuah process. Pada week6 ini sering muncul term seperti PID, fork(), parent processs, child process dan lain - lain. Web ini membantu saya mengerti maksud dari term -term tersebut.
+
+3. [Multithreading Models](https://binaryterms.com/multithreading-models-in-operating-system.html#:~:text=Many%20to%20One%20multithreading%20model,equal%20number%20of%20kernel%20threads.)
+
+    Web ini menjelaskan tentang jenis - jenis multithreading models. Ada beberapa jenis multithreading models :
+    - Many to One
+    - One to One
+    - Many to Many
+    - Two Level Multithreading
+
+    Secara general perbedaan tiap model terdapat pada mapping antara user thread dengan kernel thread.
+4. [Process States](https://www.geeksforgeeks.org/states-of-a-process-in-operating-systems/)
+
+    Web ini menjelaskan tentang tiap -tiap state yang ada pada sebuah process. Menurut saya web ini berguna karena dapat menjelaskan tiap state pada process mulai dari *New* sampai *Terminated*
+
+5. [Shared Memory vs Message Passing](https://www.tutorialspoint.com/message-passing-vs-shared-memory-process-communication-models)
+
+    Web ini menjelaskan tentang perbedaan antara dua interprocess communication yaitu *Shared Memory System* dan *Message Passing System* 
+    <img src='https://binaryterms.com/wp-content/uploads/2019/07/Shared-Memory-and-Message-Passing-in-IPC-0023.jpg' alt='Message Passing Model' style=''>
+    Materi ini juga sempat dibahas di mata kuliah *Advanced Programming*, Menurut saya web ini memantu memahami lebih dalam lagi tentang perbedaan keduanya.
+
+
