--- a/w06.md
+++ b/w06.md
@@ -27,7 +27,7 @@ permalink: /W06/
 
 5. [Shared Memory vs Message Passing](https://www.tutorialspoint.com/message-passing-vs-shared-memory-process-communication-models)\
     Web ini menjelaskan tentang perbedaan antara dua interprocess communication yaitu *Shared Memory System* dan *Message Passing System* 
-    <img src='https://binaryterms.com/wp-content/uploads/2019/07/Shared-Memory-and-Message-Passing-in-IPC-0023.jpg' alt='Message Passing Model' style=''>\
+    <img src='https://binaryterms.com/wp-content/uploads/2019/07/Shared-Memory-and-Message-Passing-in-IPC-0023.jpg' alt='Message Passing Model' style='height : 15em'>\
     Materi ini juga sempat dibahas di mata kuliah *Advanced Programming*, Menurut saya web ini memantu memahami lebih dalam lagi tentang perbedaan keduanya.
 
 
@@ -37,11 +37,11 @@ permalink: /W06/
 7. [Process vs Thread (Video)](https://www.youtube.com/watch?v=Dhf-DYO1K78&ab_channel=Udacity)\
     Video berduarasi 1 menit 41 detik ini menjelaskan tentang perbedaan antara process dan thread. Menurut saya video ini menarik karena dapat menjelaskan apa itu thread dan process dengan singkat menggunakan visualiasi yang menarik.
 
-8. []()\
-    Web ini menjelaskan
+8. [Scheduling queues](https://www.tutorialspoint.com/operating_system/os_process_scheduling.htm)\
+    Web ini menjelaskan tentang scheduling queues. menurut saya web ini menarik karena dapat menjelaskan tentang proses scheduling dengan baik
 
-9. []()\
-    Web ini menejlaskan
+9. [Independent vs Cooperating processes](https://bitsofcomputer.blogspot.com/2016/01/cooperatingprocess.html)\
+    Web ini menjabarkan tentang perbedaan anatara dua concurrent processes pada operating system yaitu independent dan cooperating processes. Menurut saya web ini menarik karena dapet menjelaskan perbedaan antara kedua concurrent process tersebut dengan baik beserta contohnya.
 
-10. []()\
-    Web ini menjelaskan
+10. [Apa itu Remote Call Procedure (RPC)](https://searchapparchitecture.techtarget.com/definition/Remote-Procedure-Call-RPC)\
+    Web ini menjelaskan tentang apa itu Remote Call Procedure (RPC). Menurut saya web ini menarik karena dapat menjelaskan apa itu RPC, bagaimana cara kerjanya, serta tipe - tipe RPC.
