added links for week07

--- a/w07.md
+++ b/w07.md
@@ -4,4 +4,40 @@ permalink: /W07/
 
 # TOP 10 LINKS WEEK 7
 
-1. [Coming Soon](#)\
+1. [EROHPAMES\n ???](https://www.tutorialspoint.com/semaphores-in-operating-system#:~:text=Semaphores%20are%20integer%20variables%20that,are%20used%20for%20process%20synchronization.&text=The%20wait%20operation%20decrements%20the,S%2C%20if%20it%20is%20positive.)\
+    Mengingat quiz w07 minggu kemarin, kita diperkenalkan dengan Semaphore. Dalam web ini dijelaskan apa itu semaphore, operasi atomic wait & signal pada semaphore, serta kegunaan dan kerugian menggunakan semaphore. Web ini menarik karena dapat menjelaskan poin - poin diatas dengan singkat namun jelas.
+
+5. [Deadlock Characterization](https://www.tutorialspoint.com/deadlock-characterization)\
+    Dalam web ini dijelaskan 4 syarat terjadinya deadlock menurut Coffman yaitu : 
+    - Mutual Exclusion
+    - Hold and Wait
+    - No Preemption
+    - Circular wait
+
+    Masing - masing kondisi tersebut dijelaskan dengan lebih detil di link diatas. Menurut saya web ini berguna karena dapat menjelaskan 4 kondisi diatas dengan baik dan disertakan dengan visualisasi yang menarik. 
+
+2. [Apa itu Critical Section ?](https://www.tutorialspoint.com/critical-section-problem#:~:text=The%20critical%20section%20is%20a,execute%20in%20their%20critical%20sections.)\
+    Critical section merupakan poin yang sering muncul ketika membahas *Concurrency* . Web ini menjelaskan tentang critical section pada process *synchronization*. Menurut saya web ini menarik karena dapat menjelaskan dengan singkat dan jelas dimana critical section terjadi dan beberapa solusi untuk mengatasi masalah critical section.\
+    <img src='https://www.tutorialspoint.com/assets/questions/media/12659/Critical%20Section.PNG' alt='Message Passing Model' style='height : 15em'> \
+    *illustrasi critical section*
+
+3. [Mutex vs Semaphore](https://www.geeksforgeeks.org/mutex-vs-semaphore/)\
+    Web ini menjelaskan tentang perbedaan antara dua solusi dalam megnatasi masalah synchronization yaitu Mutex dan Semaphore. Web ini menarik menurut saya karena dapat menjelaskan perbedaan kedua solusi tersebut dengan jelas beserta kapan penggunaannya.
+
+9. [Race Condition](https://www.baeldung.com/cs/race-conditions)\
+    Race condition adalah masalah yang umum muncul pada program/aplikasi yang menerapkan multithreading. Dalam web ini dijelaskan apa itu race condition, kapan race condition dapat terjadi , serta metode - metode mengatasi race condition. Race condition merupakan bahasan yang sering muncul di week07 dan web ini membantu saya memahaminya dengan baik.
+
+4. [Dining Philosopher's Problem](https://www.tutorialspoint.com/dining-philosophers-problem-dpp#:~:text=The%20dining%20philosophers%20problem%20states,and%20left%20chopstick%20to%20eat.)\
+    Web ini menjelaskan tentang salah satu masalah dalam concurrency control yitu Dining-Philosopher's Problem. Web ini menarik karena dapat menjelaskan dengan baik bagaimana mengatasi Dining Philosopher's Problem menggunakan sempahore serta kesulitan - kesulitannya.
+
+6. [Banker's Algorithm](https://www.geeksforgeeks.org/bankers-algorithm-in-operating-system-2/#:~:text=The%20banker%27s%20algorithm%20is%20a,should%20be%20allowed%20to%20continue)\
+    Web ini menejelaskan tentang sebuah algoritma pencegahan deadlock yaitu Banker's Algoritm. Menurut saya web ini menarik karena dapat menjelaskan alur dan tahapan dari Banker's algorithm serta contoh - contoh kodenya.
+
+7. [Deadlock Avoidance](https://www.studytonight.com/operating-system/deadlock-avoidance-in-operating-system)\
+    Web ini menjelaskan tentang deadlock avoidance pada operating system. Menurut saya web ini menarik karena dapat menejlaskan proses Deadlock avoidance dengan jelas beserta dengan contoh dan illustrasi.
+
+8. [Peterson's Solution](https://www.tutorialspoint.com/peterson-s-problem)\
+    Web ini menjelaskan salah satu solusi dalam mengatasi masalah critical section yaotu Peterson's Solution. Web ini menarik karena dapat menjelaskan dengan baik alur dari aloritma Peterson dan juga masalah masalah dalam penerapannya.
+
+10. [Readers Writers Problem](https://www.tutorialspoint.com/readers-writers-problem)\
+    Web ini menjelaskan tentang sebuah masalah dalam concurrency control yaitu Readers Writers Problem. Menurut saya web ini menarik karena dapat menjelaskan kapan terjadinya readers writers problem serta implementasi solusinya menggunakan semaphore.
