--- a/w07.md
+++ b/w07.md
@@ -18,7 +18,7 @@ permalink: /W07/
 
 2. [Apa itu Critical Section ?](https://www.tutorialspoint.com/critical-section-problem#:~:text=The%20critical%20section%20is%20a,execute%20in%20their%20critical%20sections.)\
     Critical section merupakan poin yang sering muncul ketika membahas *Concurrency* . Web ini menjelaskan tentang critical section pada process *synchronization*. Menurut saya web ini menarik karena dapat menjelaskan dengan singkat dan jelas dimana critical section terjadi dan beberapa solusi untuk mengatasi masalah critical section.\
-    <img src='https://www.tutorialspoint.com/assets/questions/media/12659/Critical%20Section.PNG' alt='Message Passing Model' style='height : 15em'> \
+    <img src='https://www.tutorialspoint.com/assets/questions/media/12659/Critical%20Section.PNG' alt='Message Passing Model' style='height : 18em'> \
     *illustrasi critical section*
 
 3. [Mutex vs Semaphore](https://www.geeksforgeeks.org/mutex-vs-semaphore/)\
@@ -37,7 +37,7 @@ permalink: /W07/
     Web ini menjelaskan tentang deadlock avoidance pada operating system. Menurut saya web ini menarik karena dapat menejlaskan proses Deadlock avoidance dengan jelas beserta dengan contoh dan illustrasi.
 
 8. [Peterson's Solution](https://www.tutorialspoint.com/peterson-s-problem)\
-    Web ini menjelaskan salah satu solusi dalam mengatasi masalah critical section yaotu Peterson's Solution. Web ini menarik karena dapat menjelaskan dengan baik alur dari aloritma Peterson dan juga masalah masalah dalam penerapannya.
+    Web ini menjelaskan salah satu solusi dalam mengatasi masalah critical section yaitu Peterson's Solution. Web ini menarik karena dapat menjelaskan dengan baik alur dari algoritma Peterson dan juga masalah masalah dalam penerapannya.
 
 10. [Readers Writers Problem](https://www.tutorialspoint.com/readers-writers-problem)\
     Web ini menjelaskan tentang sebuah masalah dalam concurrency control yaitu Readers Writers Problem. Menurut saya web ini menarik karena dapat menjelaskan kapan terjadinya readers writers problem serta implementasi solusinya menggunakan semaphore.
