--- a/w08.md
+++ b/w08.md
@@ -4,34 +4,34 @@ permalink: /W08/
 
 # TOP 10 LINKS WEEK 8
 
-1. [Preemtive vs Non Preemptive Scheduling](https://www.tutorialspoint.com/preemptive-and-non-preemptive-scheduling)\
+1. [**Preemtive vs Non Preemptive Scheduling**](https://www.tutorialspoint.com/preemptive-and-non-preemptive-scheduling)\
     Web ini menjelaskan tentang perbedaan antara 2 CPU *scheduling technique* yaitu **preemtive** dan non **non preemtive scheduling**. Menurut saya web ini menarik karena dapat menjelaskan proses yang dilakukan dari keuda jenis scheduling serta titik titik perbedaannya.
 
-1. [Burst Time, Arrival Time, & Turnaround Time ](https://afteracademy.com/blog/what-is-burst-arrival-exit-response-waiting-turnaround-time-and-throughput)\
-    Web ini menjelaskan tentang apa itu Burst Time, Arrival Time, & Turnaround Time. Menurut saya web ini berguna karena dapat menjelaskan masing - masing term diatas dengan jelas beserta contoh pada tabel
+1. [**Burst Time, Arrival Time, & Turnaround Time** ](https://afteracademy.com/blog/what-is-burst-arrival-exit-response-waiting-turnaround-time-and-throughput)\
+    Web ini menjelaskan tentang apa itu **Burst Time**, **Arrival Time**, & **Turnaround Time**. Menurut saya web ini berguna karena dapat menjelaskan masing - masing term diatas dengan jelas beserta contoh pada tabel
 
-1. [Rate-monotonic scheduling](https://www.geeksforgeeks.org/rate-monotonic-scheduling/)\
+1. [**Rate-monotonic scheduling**](https://www.geeksforgeeks.org/rate-monotonic-scheduling/)\
     Web ini menjelaskan tentang sebuah priority scheduling yaitu ***Realtime Monotonic Scheduling***. Menurut saya web ini menarik karena dapat menjelaskan dengan detil cara kerja *realtime monotonic scheduling* , *equation* yang harus dipenuhi, serta kelebihan dan kekurangannya.
 
-1. [CPU Affinity : Soft vs Hard](https://www.how-hard-can-it.be/cpu-affinity-introduction/)\
-    Web ini menjelaskan tentang perbedaan CPU affinity, soft affinity dan hard affinity. Menurut saya web ini menarik karena dapat perbedaan keduanya dengan jelas serta kelebihan dan kekurangan masing - masing.
+1. [**CPU Affinity : Soft vs Hard**](https://www.how-hard-can-it.be/cpu-affinity-introduction/)\
+    Web ini menjelaskan tentang perbedaan CPU affinity, **soft affinity** dan **hard affinity**. Menurut saya web ini menarik karena dapat perbedaan keduanya dengan jelas serta kelebihan dan kekurangan masing - masing.
 
-1. [NUMA vs UMA](https://www.geeksforgeeks.org/difference-between-uniform-memory-access-uma-and-non-uniform-memory-access-numa/)\
-    Web ini menjelaskan tentang perbedaan antara dua *shared memory model* dalam *Multiprocessors* yaitu Non-Uniform Memory Access (NUMA) dan Uniform Memory Access (UMA). Menurut saya web ini menarik karena dapat perbedaan kedua model tersebut pada aspek kecepatan, limit bandwith, serta pengaplikasiannya.
+1. [**NUMA vs UMA**](https://www.geeksforgeeks.org/difference-between-uniform-memory-access-uma-and-non-uniform-memory-access-numa/)\
+    Web ini menjelaskan tentang perbedaan antara dua *shared memory model* dalam *Multiprocessors* yaitu **Non-Uniform Memory Access** **(NUMA)** dan**Uniform Memory Access (UMA)**. Menurut saya web ini menarik karena dapat perbedaan kedua model tersebut pada aspek kecepatan, limit bandwith, serta pengaplikasiannya.
 
-1. [Big O](https://www.geeksforgeeks.org/analysis-algorithms-big-o-analysis/)\
-    Web ini menjelaskan tentang analisis algoritma menggunakan Big O notation. Menurut saya web ini berguna sebagai review singkat tentang Big O notation yang sudah pernah dipelajari pada mata kuliah Struktur Data & Algoritma.
+1. [**Big O**](https://www.geeksforgeeks.org/analysis-algorithms-big-o-analysis/)\
+    Web ini menjelaskan tentang analisis algoritma menggunakan **Big O notation**. Menurut saya web ini berguna sebagai review singkat tentang Big O notation yang sudah pernah dipelajari pada mata kuliah Struktur Data & Algoritma.
 
-1. [Load Balancing Algorithms](https://kemptechnologies.com/load-balancer/load-balancing-algorithms-techniques/)\
+1. [**Load Balancing Algorithms**](https://kemptechnologies.com/load-balancer/load-balancing-algorithms-techniques/)\
     Web ini menjelaskan jenis jenis algoritma ***Load Balancing***. Menurut saya web ini menarik karena dapat menjelaskan tipe - tipe load balancing serta kegunaannya.
 
-1. [Asymmetric vs Symmetric Multiprocessing](https://www.geeksforgeeks.org/difference-between-asymmetric-and-symmetric-multiprocessing/)\
+1. [**Asymmetric vs Symmetric Multiprocessing**](https://www.geeksforgeeks.org/difference-between-asymmetric-and-symmetric-multiprocessing/)\
     Web ini menjelaskan tentang 2 tipe multiprocessing yaitu  ***Asymmetric Multiprocessing*** dan ***Symmetric Multiprocessing***. Web ini menarik karena dapat menunjukan perbedaan kedua jenis multiprocessing tersebut dalam berbagai aspek seperti: komunikasi antar processor, biaysa, serta kompleksitas designnya.
 
-1. [FCFS Scheduling](https://www.guru99.com/fcfs-scheduling.html)\
-    Web ini menjelaskan tentang salah satu scheduling algorith yaitu First Come First Serve (FCFS). Menurut saya web ini berguna karena dapat menjelaskan dengan jelas bagaimana algoritma scheduling FCFS bekerja, sifat - sifatnya, beserta contohnya.
+1. [**FCFS Scheduling**](https://www.guru99.com/fcfs-scheduling.html)\
+    Web ini menjelaskan tentang salah satu scheduling algorith yaitu **First Come First Serve (FCFS)**. Menurut saya web ini berguna karena dapat menjelaskan dengan jelas bagaimana algoritma scheduling FCFS bekerja, sifat - sifatnya, beserta contohnya.
 
-1. [Shortest Job First](https://www.guru99.com/shortest-job-first-sjf-scheduling.html)\
+1. [**Shortest Job First**](https://www.guru99.com/shortest-job-first-sjf-scheduling.html)\
     Web ini menjelaskan tentang salah satu *scheduling algorithm* yaitu **Shortest Job First (SJF)**. Menurut saya web ini berguna karena dapat menjelaskan dengan jelas bagaimana algoritma scheduling SJF bekerja, jenis jenis dari SJF method, beserta contoh dari masing masin jenisnya.
 
 
