--- a/w09.md
+++ b/w09.md
@@ -22,7 +22,7 @@ permalink: /W09/
 1. [**SATA vs NVMe**](https://www.howtogeek.com/657972/nvme-vs.-sata-which-ssd-technology-is-faster/)\
     Web ini menjelaskan tentang perbedaan antara 2 jenis SSD yaitu SATA & NVME. Web ini menarik karena dapat menjelaskan perbedaan antara 2 SSD, siapa yg lebih cepat, serta kelebihan dan kekurangannya.
 
-1. [**Chroot ?**](https://www.cloudsavvyit.com/731/what-is-chroot-on-linux-and-how-do-you-use-it/)\
+1. [**Chroot**](https://www.cloudsavvyit.com/731/what-is-chroot-on-linux-and-how-do-you-use-it/)\
     Web ini menjelaskan apa itu chroot dalam linux. Web ini menarik karena dapat menjelaskan apa itu chroot, serta apa yang dilakukan chroot.
 
 1. [**GRUB**](https://itsfoss.com/what-is-grub/)\
